--- a/y-kien/xa-hoi-thong-tin.html
+++ b/y-kien/xa-hoi-thong-tin.html
@@ -17,6 +17,7 @@
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 
+<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 
@@ -132,19 +133,27 @@ div.even {background-color: darkslategray}
 div.footer { font-size: 80%; color: red; text-align: center; }
 
 .flright { float:right; margin:0px 0px 0px 5px; width:45%; }
-
 @media (max-width: 399px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:10px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
+  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 400px) and (max-width: 499px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:20px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
+  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 500px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:40px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
+  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 1260px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:40px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .leftads {position:absolute;top:0;left:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;align:right;}
+  .rightads {position:absolute;top:0;right:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;}
 }
+
 
 </style>
 </head>
@@ -158,151 +167,37 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
                 <span></span>
             </button>
-    <amp-accordion>
-<section>
-  <h3 class="myheader">Giới-thiệu</h3>
-  <p>
-    <a href='/'>Trang-bìa</a><br>
+  <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about.html'>Thân-thế</a><br>
     <a href='/home/cv.html'>Thành-tích</a><br>
-  </p>
-</section>
-<section>
-  <h3 class="myheader">Hữu-ích</h3>
-  <div>
-    <amp-accordion>
-    <section>
-      <h4 class="myheader">Lập-kế-hoạch-tài-chính</h4>
-      <p>
-        <a href='/huu-ich/ke-hoach-tai-chinh/'>Giới-thiệu</a><br>
-        <a href='/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html'>Ghi-chép kết-quả-đầu-tư-dài-hạn</a><br>
-      </p>
-    </section>
-    <section>
-      <h4 class="myheader">Đầu-tư-cổ-phiếu</h4>
-      <p>
-        <a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/quy-dau-tu.html'>Quỹ-đầu-tư</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html'>Sổ-tiết-kiệm hay Quỹ-đầu-tư?</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc.html'>Làm gì khi thị-trường xuống-dốc?</a>
-      </p>
-    </section>
-    <section>
-      <h4 class="myheader">Các loại bảo-hiểm</h4>
-      <p>
-        <a href='/huu-ich/cac-loai-bao-hiem/'>Các loại bảo-hiểm</a><br>
-        <a href='/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html'>Phí-bảo-hiểm-nhân-thọ</a><br>
-        <a href='/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html'>Bảo-hiểm-nhân-thọ-liên-kết-chung</a><br>
-      </p>
-    </section>
-    <section>
-      <h4 class="myheader">Câu-chuyện</h4>
-      <p>
-        <a href='/huu-ich/cau-chuyen/bat-dau-dau-tu.html'>Bắt-đầu đầu-tư</a><br>
-        <a href='/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html'>Những quyết-định tốt cho tuổi-già</a><br>
-        <a href='/huu-ich/cau-chuyen/nghi-huu-som.html'>Về-hưu trước 40 tuổi</a><br>
-        <a href='/huu-ich/cau-chuyen/tranh-mang-no.html'>Tránh mang nợ</a><br>
-        <a href='/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html'>Để tiền mua-nhà hay đầu-tư</a><br>
-        <a href='/huu-ich/cau-chuyen/bot-lo-ve-tien.html'>6 điều giúp tôi bớt lo-lắng về tiền-bạc</a><br>
-      </p>
-    </section>
-    </amp-accordion>
-    <a href='/huu-ich/chi-tieu.html'>Chi-tiêu có kế-hoạch</a><br>
-    <a href='/huu-ich/nghi-luc.html'>Nghị-lực để có dư tiền</a><br>
-    <a href='/huu-ich/lam-phat-loi-song.html'>Lạm-phát-lối-sống</a><br>
-    <a href='/huu-ich/tich-luy.html'>Tích-luỹ-tài-sản</a><br>
-    <a href='/huu-ich/de-tien-vao-dau.html'>Để tiền vào đâu</a><br>
-    <a href='/huu-ich/cach-dau-tu.html'>Những cách đầu-tư</a><br>
-    <a href='/huu-ich/dung-so-dau-tu.html'>Đừng sợ chữ đầu-tư</a><br>
-    <a href='/huu-ich/hieu-qua-dau-tu.html'>Tính hiệu-quả-đầu-tư</a><br>
-    <a href='/huu-ich/tich-luy-dai-han.html'>So-sánh công-cụ tích-luỹ-dài-hạn</a><br>
-  </div>
-</section>
-<section>
+  <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
+
+      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
+
+      <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
+
+      <h4 class="myheader"><a href='/huu-ich/cac-loai-bao-hiem/'>Các loại bảo-hiểm</a></h4>
+
+      <h4 class="myheader"><a href='/huu-ich/cau-chuyen/'>Câu-chuyện</a></h4>
+
   <h3 class="myheader">Kinh-nghiệm</h3>
-  <amp-accordion>
-  <section>
-    <h4 class="myheader">Máy-tính</h4>
-    <p>
-      <a href='/kinh-nghiem/may-tinh/pi-network.html'>Tiền-mật-mã Pi</a><br>
-      <a href='/kinh-nghiem/may-tinh/gnucash.html'>GnuCash</a><br>
-      <a href='/kinh-nghiem/may-tinh/ham-tai-chinh.html'>Các phép-tính-tài-chính cần biết</a><br>
-      <a href='/kinh-nghiem/may-tinh/cloudstorage.html'>Kinh-nghiệm dùng cloud storage</a><br>
-      <a href='/kinh-nghiem/may-tinh/privcloudstor.html'>Hướng-dẫn làm cloud storage server</a><br>
-      <a href="/kinh-nghiem/may-tinh/vi-dien-tu.html">Nhận-xét các ví-điện-tử</a><br>
-      <a href='/kinh-nghiem/may-tinh/googlemaps.html'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a><br>
-      <a href='/kinh-nghiem/may-tinh/spam-call.html'>Chặn những cuộc-gọi-tiếp-thị</a><br>
-      <a href='/kinh-nghiem/may-tinh/raspberrypi.html'>RaspberryPi</a><br>
-      <a href='/kinh-nghiem/may-tinh/spam.html'>Chặn spam mail</a><br>
-      <a href='/kinh-nghiem/may-tinh/toys.html'>Home server cũ</a><br>
-      <a href='/kinh-nghiem/may-tinh/cryptocurrency.html'>Tìm-hiểu Bitcoin</a><br>
-      <a href='/kinh-nghiem/may-tinh/protect.html'>Bảo vệ tài sản số</a>
-    </p>
-  </section>
+    <h4 class="myheader"><a href='/kinh-nghiem/may-tinh/'>Máy-tính</a></h4>
 
-  <section>
+    <h4 class="myheader"><a href='/kinh-nghiem/chu-viet/'>Chữ-Việt</a></h4>
 
-    <h4 class="myheader">Chữ Việt</h4>
-    <p>
-      <a href='/kinh-nghiem/chu-viet/ghi-dau-thanh-1.html'>Vị trí dấu thanh</a><br>
-      <a href='/kinh-nghiem/chu-viet/unicode.html'>Unicode</a><br>
-      <a href='/kinh-nghiem/chu-viet/utf-8.html'>UTF-8</a><br>
-      <a href='/kinh-nghiem/chu-viet/web.html'>Web Việt</a>
-    </p>
-  </section>
+    <h4 class="myheader"><a href='/kinh-nghiem/linh-tinh/'>Linh tinh</a></h4>
 
-  <section>
-
-    <h4 class="myheader">Linh tinh</h4>
-    <p>
-      <a href='/kinh-nghiem/linh-tinh/bep.html'>Bếp</a><br>
-      <a href='/kinh-nghiem/linh-tinh/ac-dc.html'>Điện một chiều và điện xoay chiều</a><br>
-      <a href='/kinh-nghiem/linh-tinh/tieu-thu-dien.html'>Tiêu thụ điện</a><br>
-      <a href='/kinh-nghiem/linh-tinh/dien-standby.html'>Điện standby</a><br>
-      <a href='/kinh-nghiem/linh-tinh/magchan.html'>Dùng thử Magchan để giặt</a><br>
-      <a href='/kinh-nghiem/linh-tinh/may-lanh.html'>Máy lạnh</a><br>
-      <a href='/kinh-nghiem/linh-tinh/may-lanh-inverter.html'>Máy lạnh inverter</a><br>
-      <a href='/kinh-nghiem/linh-tinh/nong.html'>Nóng</a><br>
-      <a href='/kinh-nghiem/linh-tinh/nhiet-do.html'>Nhiệt độ một ngày</a><br>
-      <a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv.html'>Tần số của TV</a><br>
-      <a href='/kinh-nghiem/linh-tinh/hong-ngoai.html'>Hồng ngoại</a><br>
-    </p>
-  </section>
-  </amp-accordion>
-</section>
-<section>
-  <h3 class="myheader">Ý kiến</h3>
-  <p>
-    <a href='/y-kien/bat-ca-hai-tay.html'>Bắt cá hai tay</a><br>
-    <a href='/y-kien/su-giau-co.html'>Nguồn gốc sự giàu có</a><br>
-    <a href='/y-kien/xa-hoi-thong-tin.html'>Xã hội thông tin</a><br>
-    <a href='/y-kien/dung-hang-viet-nam.html'>Dùng hàng Việt</a><br>
-    <a href='/y-kien/gia-tra.html'>Giả trá</a><br>
-    <a href='/y-kien/nhung-cai-nem.html'>Những cái nêm</a><br>
-    <a href='/y-kien/khac-nguoi.html'>Khác người</a><br>
-    <a href='/y-kien/da-len-bao.html'>Đã lên báo</a>
-  </p>
-</section>
-
-<section>
+  <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
 
   <h3 class="myheader">Danh mục</h3>
-  <p>
     <a href='/download/'>Download</a><br>
     <a href='/sitemap.html'>Mục lục</a>
-  </p>
-</section>
-
-<section>
   <h3 class="myheader"></h3>
-  <p>
   <br>
   <br>
   <br>
   <br>
-  </p>
-</section>
-</amp-accordion>
+
 
   </amp-sidebar>
 <main>
@@ -311,6 +206,29 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <button on="tap:sidebar.toggle" class="ampstart-btn caps ml1" style="font-size:90%;font-weight:bold;background-color: blue; color: white;">MENU
       </button>
     </div>
+  </div>
+
+  <div class="leftads">
+  <!-- AMP Responsive Skyscrapper -->
+<amp-ad
+media="(min-width: 1260px)"
+layout="fill"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="5275186684">
+</amp-ad>
+
+  </div>
+  <div class="rightads">
+  <!-- AMP Responsive Skyscrapper -->
+<amp-ad
+media="(min-width: 1260px)"
+layout="fill"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="5275186684">
+</amp-ad>
+
   </div>
 
   <div class="body">
@@ -346,6 +264,31 @@ https://www.lhboi.name.vn/y-kien/xa-hoi-thong-tin
 <li>…</li></ul>
 Những thông tin bổ sung đó được tạo ra và duy trì trong các hệ thống máy của từng ngành, tất cả đều dùng chung mã số của công dân làm chìa khoá của thông tin. Tất cả các thông tin đó phát sinh từ cấp cơ sở của các tổ chức kinh tế hay xã hội, và sẽ quay lại phục vụ cho mọi hoạt động của kinh tế và xã hội. Tất cả mọi thông tin được ghi lại đều có ích, ghi được càng nhiều càng tốt. Một phần thông tin chỉ để dùng nội bộ trong từng tổ chức, một phần được mở cho các đối tượng trong xã hội dùng. Mọi thông tin luôn luôn đi theo từng cá nhân từ khi sinh ra đến khi qua đời.<br />
 Một em bé vừa được sinh ra, bệnh viện nhập ngay mã số cá nhân và tên mẹ, ngày giờ, nơi sinh vào với một mã số cá nhân mới (được cấp từ hệ thống của công an). Cha mẹ không cần đem giấy chứng sinh, chỉ cần đem mã số cá nhân của em bé và cha mẹ đến hộ tịch phường làm khai sinh thì hồ sơ thông tin của em bé sẽ có thêm tên, tên cha, quê quán, số giấy khai sinh. Sau đó cũng không cần đem giấy khai sinh, chỉ cần đem mã số cá nhân đến công an quận để nhập hộ khẩu là hồ sơ số của em bé có thêm địa chỉ thường trú. Khi đến tuổi đi học, cũng không cần nộp giấy khai sinh cho nhà trường. Tương tự như thế, đến đâu cũng chỉ cần đưa mã số cá nhân ra là mọi thông tin cần thiết đều có sẵn để dùng.
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
 
 <p>Việc nhập thêm, sửa đổi hay xem thông tin của mỗi công dân đều phải được kiểm soát chặt chẽ. Mỗi người chỉ được xem hay sửa thông tin trong quyền hạn của mình. Ví dụ như:</p>
 <ul><li>mọi công dân đều có quyền <b>xem</b> tất cả và cho người khác xem từng phần hay tất cả mọi thông tin liên quan đến chính mình và người mà mình đang bảo hộ (ví dụ như con chưa đến tuổi trưởng thành)</li>
@@ -356,6 +299,31 @@ Một em bé vừa được sinh ra, bệnh viện nhập ngay mã số cá nhâ
 <li>công dân được quyền ghi vào hồ sơ sức khoẻ của mình những thông tin đã được ký bằng chữ ký số bởi nhân viên y tế có thẩm quyền</li>
 <li>nếu công dân thấy thông tin về mình chưa chính xác thì sẽ có phương tiện để yêu cầu sửa sai, công dân không được quyền xoá bất cứ thông tin nào của mình</li>
 <li>các tổ chức kinh tế/xã hội có thể xem một phần thông tin của công dân đến giao dịch trong phạm vi cho phép và đôi khi phải được sự đồng ý của công dân đó. Ví dụ như công ty bán bảo hiểm xe hơi có thể yêu cầu khách hàng cho xem thông tin về vi phạm luật giao thông trước khi quyết định mức phí bảo hiểm, nếu khách hàng từ chối cho xem thì công ty bảo hiểm vẫn bán bảo hiểm nhưng mức phí có thể cao hơn. Nhân viên tín dụng ngân hàng có thể yêu cầu khách hàng cho xem quá trình vay nợ ngân hàng trước khi quyết định cho vay. Công ty bảo hiểm nhân thọ có quyền yêu cầu khách hàng cho xem thông tin về sức khoẻ. Cảnh sát giao thông có quyền xem thông tin về bằng lái mà không cần sự đồng ý của công dân. Nhân viên y tế cấp cứu có quyền xem hồ sơ sức khoẻ của người được cấp cứu.</li></ul>
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
 
 <p>Thông tin được tạo ra ở cấp cơ sở của các tổ chức và sẽ được tập trung lại trong các hệ thống cơ sở dữ liệu cấp cao hơn. Ví dụ như thông tin về giao dịch với ngân hàng được tạo ra ở các phòng giao dịch, rồi được tập trung về chi nhánh, rồi lại được chuyển tiếp lên ngân hàng chính và cuối cùng là vào hệ thống cơ sở dữ liệu ngành ngân hàng.<br />
 </p>
@@ -366,6 +334,31 @@ Thẻ thông minh là thẻ có mang một máy tính nhỏ bên trong, thẻ SI
 Khi công dân giao dịch với các tổ chức, nhân viên giao dịch sẽ xem thẻ CMND của công dân và kiểm tra sơ xem thẻ có đúng là của công dân đó không bằng cách nhìn hình in trên thẻ hoặc qua các máy nhận dạng sinh học (dấu tay, ảnh võng mạc). Sau đó, nếu công dân đồng ý cho nhân viên lấy một phần thông tin cá nhân của mình thì đưa thẻ CMND vào máy đọc thẻ gắn với máy tính của nhân viên giao dịch, qua máy đọc thẻ đó, thẻ thông minh đồng ý cho hệ thống cơ sở dữ liệu gửi những phần thông tin mà nhân viên giao dịch được phép xem đến máy tính của nhân viên.<br />
 Trong những trường hợp công dân muốn chủ động cho người khác xem một phần thông tin của mình, ví dụ như khi đi xin việc, nhà tuyển dụng muốn biết hồ sơ sức khoẻ, quá trình học tập, công tác, lý lịch tư pháp và quá trình vay nợ của công dân thì sẽ có một ứng dụng trên máy chủ web của hệ thống cơ sở dữ liệu để công dân chọn những thông tin cần tiết lộ rồi đưa thẻ lại máy đọc thẻ để xác nhận việc đồng ý tiết lộ, sau đó hệ thống cơ sở dữ liệu sẽ gửi những thông tin đó đến hộp thư của nhà tuyển dụng dưới dạng đã ký bằng chữ ký số của máy chủ cơ sở dữ liệu (tương đương như đã được công chứng) và được mã hoá bằng chữ ký số của nhà tuyển dụng (chỉ có nhà tuyển dụng mới mở ra xem được); công dân có thể dùng máy tính tại nhà, tại nơi nhà tuyển dụng hay tại những <i>kiosqe thông tin</i> để làm việc gửi thông tin này.<br />
 Thông tin được tiết lộ từ hệ thống cơ sở dữ liệu sẽ ở dạng không thể in được, không thể tách rời từng phần được (trừ trường hợp người xem thông tin trên máy rồi ghi lại bằng tay từng chữ vào giấy hay vào máy tính), có kèm theo ghi chú cẩn thận về mục đích và đối tượng được xem thông tin, người nhận thông tin phải có trách nhiệm giữ bí mật của thông tin nhận được; dùng xong phải huỷ ngay, nếu thông tin bị phát tán ra thì có thể truy trách nhiệm người phát tán.</p>
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
 
 <p>Những thiết bị thông tin di động sẽ có ích cho nhân viên thi hành nhiệm vụ ngoài đường, ví dụ như cảnh sát giao thông có thể dùng máy điện thoại di động qua dịch vụ dữ liệu không dây tra thông tin về bằng lái, bảng số xe của người vi phạm luật, không sợ nạn bằng giả, bảng số giả nữa; nhân viên y tế cấp cứu cũng có thể xem hồ sơ sức khoẻ nạn nhân bằng máy tính xách tay qua dịch vụ dữ liệu không dây.</p>
 <p>Một hệ thống thông tin toàn quốc như vậy sẽ đem lại lợi ích to lớn cho toàn xã hội, tiết kiệm rất nhiều thời gian và tiền bạc cho mọi người. Thử tưởng tượng người cần xin việc chỉ cần đến khám sức khoẻ tại bệnh viện, trả phí xong là hồ sơ sức khoẻ đã được cập nhật, sau đó đến kiosqe thông tin gửi hồ sơ sức khoẻ mới nhất cùng với các thông tin có sẵn khác đến nhiều nhà tuyển dụng, không phải đi sao chụp và công chứng đủ thứ giấy, chi phí dùng kiosque còn rẻ hơn tiền mua phong bì hồ sơ nữa.</p>
